--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <div class="container">
           <div class="row">
             <div class="text col-md 9 col-12 mx-auto">
-				<h1 class="text-center">BuyMC</h1>
+				<h1 class="text-center">Depression</h1>
 				
 		</div>
 		<br><br><br>
