--- a/donate.html
+++ b/donate.html
@@ -4,21 +4,21 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Donate | BuyMC</title>
+    <title>PE</title>
     <link href="css/bootstrap-4.3.1.css" rel="stylesheet">
 	
   </head>
   <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-      <a class="navbar-brand" href="index.html">BuyMC</a>
+      <a class="navbar-brand" href="index.html">Depression</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"> <span class="navbar-toggler-icon"></span> </button>
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
           <li class="nav-item"> <a class="nav-link" href="index.html">Home </a> </li>
           <li class="nav-item active"> <a class="nav-link" href="donate.html">Donate </a> </li>
-		  <li class="nav-item"> <a class="nav-link" href="servers.html">Servers </a> </li>
-		  <li class="nav-item"> <a class="nav-link" href="buy.html">Buy </a> </li>
-<li class="nav-item"> <a class="nav-link" href="discord.html">Discord </a> </li>
+		  <li class="nav-item"> <a class="nav-link" href="servers.html">Info </a> </li>
+		  <li class="nav-item"> <a class="nav-link" href="buy.html"<Treatment </a> </li>
+                  <li class="nav-item"> <a class="nav-link" href="discord.html">Get Help </a> </li>
           <!-- <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Server IP  </a>
             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
@@ -183,8 +183,8 @@
         <div class="row">
           <div class="col-12">
 
-            <p>Copyright © BuyMC. All rights reserved.</p>
-			<p>Designed by JonoLeviaThan Studios</p>
+            <p>Copyright © JonoLeviaThan. All rights reserved.</p>
+			<p>Designed by Jono Moore</p>
           </div>
         </div>
       </div>
