--- a/donate.html
+++ b/donate.html
@@ -17,7 +17,7 @@
           <li class="nav-item"> <a class="nav-link" href="index.html">Home </a> </li>
           <li class="nav-item active"> <a class="nav-link" href="donate.html">Donate </a> </li>
 		  <li class="nav-item"> <a class="nav-link" href="servers.html">Info </a> </li>
-		  <li class="nav-item"> <a class="nav-link" href="buy.html"<Treatment </a> </li>
+                  <li class="nav-item"> <a class="nav-link" href="buy.html">Treatment </a> </li>
                   <li class="nav-item"> <a class="nav-link" href="discord.html">Get Help </a> </li>
           <!-- <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Server IP  </a>
