--- a/donate.html
+++ b/donate.html
@@ -43,139 +43,29 @@
           <div class="row">
             <div class="col-12">
               <h1 class="text-center">Donate</h1>
-				<p class="text-center">Donate! It Makes Use Make More Servers For More People</p>
-				<p class="text-center"><a class="btn btn-primary btn-lg" href="https://paypal.me/BuyMCS" target="_blank" role="button">Donate to BuyMC on Paypal</a> </p>
+				<p class="text-center">Donate to Beyond Blue to help people with depression</p>
+				<p class="text-center"><a class="btn btn-primary btn-lg" href="https://www.beyondblue.org.au/get-involved/make-a-donation" target="_blank" role="button">Donate to BuyMC on Paypal</a> </p>
             </div>
           </div>
         </div>
       </div>
-	  <!--
-	  <h1 class="text-center">Kits for Donors</h1>
+	  <h1 class="text-center">Why Donate?</h1>
     <div class="container ">
 	  <div class="jumbotron">
         <div class="container">
           <div class="row">
             <div class="text col-md-8 col-12 mx-auto">
-<h2>Metal Set $3 AUD</h2>
-<h4>1 Iron Pickaxe</h4>
-<h4>1 Iron Axe</h4>
-<h4>1 Iron Sword</h4>
-<h4>1 Iron Shovel</h4>
-<h4>Full Set Of Iron Armor</h4>
-<h4>5,000 InGameMoney</h4>
-<h4>64 Iron Ingots</h4>
-			</div>
-          </div>
-        </div>
-	  </div>
-  </div>
-
-	<div class="container ">
-	  <div class="jumbotron">
-        <div class="container">
-          <div class="row">
-            <div class="text col-md-8 col-12 mx-auto">
-<h2>The Good Set $5 AUD</h2>
-<h4>1 Diamond Pickaxe</h4>
-<h4>1 Iron Axe</h4>
-<h4>1 Iron Sword</h4>
-<h4>1 Iron Shovel</h4>
-<h4>Full Iron Armor</h4>
-<h4>10,000 InGame Money</h4>
-<h4>100 Iron Ingots</h4>
-			</div>
-          </div>
-        </div>
-	  </div>
-  	</div>
-
-	<div class="container ">
-	  <div class="jumbotron">
-        <div class="container">
-          <div class="row">
-            <div class="text col-md-8 col-12 mx-auto">
-<h2>The Great Set $7 AUD</h2>
-<h4>Donor Rank</h4>
-<h4>1 Full Diamond Tools</h4>
-<h4>1 Diamond Helmet</h4>
-<h4>1 Diamond Chestplate</h4>
-<h4>1 Diamond Leggings</h4>
-<h4>1 Iron Boots</h4>
-<h4>20,000 InGame Money</h4>
-<h4>150 Iron Ingots</h4>
-			</div>
-          </div>
-        </div>
-	  </div>
-  	</div>
-
-	<div class="container ">
-	  <div class="jumbotron">
-        <div class="container">
-          <div class="row">
-            <div class="text col-md-8 col-12 mx-auto">
-<h2>The Best Set $10 AUD</h2>
-<h4>Donor Rank</h4>
-<h4>1 Full Diamond Tools</h4>
-<h4>1 Full Diamond Armor</h4>
-<h4>25,000 InGame Money</h4>
-<h4>200 Iron Ingots</h4>
-<h4>1 Anvil</h4>
-<h4>1 Enchanted Book: Sharpness 5</h4>
-<h4>1 Enchanted Book: Unbreaking 3</h4>
-<h4>1 Enchanted Book: Efficiency 5</h4>
-			</div>
-          </div>
-        </div>
-	  </div>
-  	</div>
-
-	<div class="container">
-	  <div class="jumbotron">
-        <div class="container">
-          <div class="row">
-            <div class="text col-md-8 col-12 mx-auto">
-<h2>The Bestest Set $15 AUD</h2>
-<h4>Donor Rank</h4>
-<h4>1 Full Diamond Tools</h4>
-<h4>1 Full Diamond Armour: Protection 4</h4>
-<h4>39 Bookshelf</h4>
-<h4>1 Enchantment Table</h4>
-<h4>50,000 InGame Money</h4>
-<h4>300 Iron Ingots</h4>
-<h4>25 Diamonds</h4>
-			</div>
-          </div>
-        </div>
-	  </div>
-  	</div>
-
-	<div class="container">
-	  <div class="jumbotron">
-        <div class="container">
-          <div class="row">
-            <div class="text col-md-8 col-12 mx-auto">
-<h2>The Holy Set $30 AUD</h2>
-<h4>Donor Rank</h4>
-<h4>Full Diamond Tools: Fully Customized</h4>
-<h4>Full Diamond Armour: Fully Customized</h4>
-<h4>20 Enchanted Books: Player Choice</h4>
-<h4>Anvil</h4>
-<h4>50 Bookshelf</h4>
-<h4>1 Enchantment Table</h4>
-<h4>100,000 InGmae Money</h4>
-<h4>500 Iron Ingots</h4>
-<h4>500 gold ingots</h4>
-<h4>300 Lapis</h4>
-<h4>500 Redstone</h4>
-<h4>300 Emeralds</h4>
-<h4>200 Diamonds</h4>
+<h2>Beyond Blue is attepting to lower the Depression Suicide rates</h2>
+<h4>&</h4>
+<h4>Supporting People Suffering from the Illness</h4>
+<h4></h4>
+<h4>It would help Beyond Blue a lot if people donated</h4>
+<h4>and supported those in times of struggle</h4>
             </div>
           </div>
         </div>
 	  </div>
   	</div>
--->
     
   <footer class="text-center">
 		<br><br>
