--- a/donate.html
+++ b/donate.html
@@ -44,7 +44,7 @@
             <div class="col-12">
               <h1 class="text-center">Donate</h1>
 				<p class="text-center">Donate to Beyond Blue to help people with depression</p>
-				<p class="text-center"><a class="btn btn-primary btn-lg" href="https://www.beyondblue.org.au/get-involved/make-a-donation" target="_blank" role="button">Donate to BuyMC on Paypal</a> </p>
+				<p class="text-center"><a class="btn btn-primary btn-lg" href="https://www.beyondblue.org.au/get-involved/make-a-donation" target="_blank" role="button">Donate to Beyond Blue</a> </p>
             </div>
           </div>
         </div>
