--- a/donate.html
+++ b/donate.html
@@ -57,7 +57,7 @@
             <div class="text col-md-8 col-12 mx-auto">
 <h4 class="text-center">Beyond Blue is attepting to lower the Depression Suicide rates</4>
 		    <h4 class="text-center">&</h4>
-<h4>Supporting People Suffering from the Illness</h4>
+<h4 class="text-center">Supporting People Suffering from the Illness</h4>
 <h4></h4>
 <h4 class="text-center">It would help Beyond Blue a lot if people donated</h4>
 <h4 class="text-center">and supported those in times of struggle</h4>
