--- a/index.html
+++ b/index.html
@@ -54,12 +54,12 @@
             <h3>Donate</h3>
           </div>
           <div class="col-lg-4 col-md-6 col-sm-12 text-center">
-            <a href="buy.html"><img class="rounded-circle" alt="140x140" style="width: 140px; height: 140px;" src="images/buy.svg" data-holder-rendered="true"></a>
-            <h3>Buy Server</h3>
+            <a href="buy.html"><img class="rounded-circle" alt="140x140" style="width: 140px; height: 140px;" src="images/treatment.svg" data-holder-rendered="true"></a>
+            <h3>Treatment</h3>
           </div>
           <div class="col-lg-4 col-md-6 col-sm-12 text-center">
-            <a href="servers.html"><img class="rounded-circle" alt="140x140" style="width: 140px; height: 140px;" src="images/shop.svg" data-holder-rendered="true"></a>
-            <h3>See our Servers</h3>
+            <a href="servers.html"><img class="rounded-circle" alt="140x140" style="width: 140px; height: 140px;" src="images/help.svg" data-holder-rendered="true"></a>
+            <h3>Get Help</h3>
           </div>
         </div>
         <br>
