--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
             <h3>Treatment</h3>
           </div>
           <div class="col-lg-4 col-md-6 col-sm-12 text-center">
-            <a href="servers.html"><img class="rounded-circle" alt="140x140" style="width: 140px; height: 140px;" src="images/help.svg" data-holder-rendered="true"></a>
+            <a href="servers.html"><img class="rounded-circle" alt="140x140" style="width: 140px; height: 140px;" src="images/gethelp.svg" data-holder-rendered="true"></a>
             <h3>Get Help</h3>
           </div>
         </div>
