--- a/servers.html
+++ b/servers.html
@@ -62,8 +62,10 @@
                                  <h4 class="text-center">Try out the server before purchase so you know what your getting.</h4>
 		    
 		                 <br>
-		                 <h2 class="text-center">Server 1:</h2>
-			        	<h4 class="text-center">s1.buymc.net</h4>
+		                 <h2 class="text-center">What is depression:</h2>
+			        	<h4 class="text-center">Depression is a mood disorder, which can affect people's moods in making them</h4>
+		                        <h4 class="text-center">overly sad or alone, making them stay to themselfs for hours at at time,</h4>
+		                        <h4 class="text-center">it can also make them have a loss of interst in things they would otherwise enjoy</h4>
 				<br>
 				<h2 class="text-center">Server 2:</h2>
 					<h4 class="text-center">s2.buymc.net</h4>
