--- a/servers.html
+++ b/servers.html
@@ -61,7 +61,7 @@
             <div class="text col-md-8 col-12 mx-auto">
 
 		                 <br>
-		                 <h2 class="text-center">What is depression:</h2>
+		                 <h2 class="text-center">What is depression?</h2>
 			        	<h4 class="text-center">Depression is a mood disorder, which can affect people's moods in making them overly sad or alone, making them stay to themselfs for hours at at time, it can also make them have a loss of interst in things they would otherwise enjoy.</h4>
 				<br>
 				<h2 class="text-center">Server 2:</h2>
