--- a/servers.html
+++ b/servers.html
@@ -59,12 +59,15 @@
         <div class="container">
           <div class="row">
             <div class="text col-md-8 col-12 mx-auto">
+		    
+		                <br>
+				<h1 class="text-center">About Depression/h1>
 
 		                 <br>
 		                 <h2 class="text-center">What is depression?</h2>
 			        	<h4 class="text-center">Depression is a mood disorder, which can affect people's moods in making them overly sad or alone, making them stay to themselfs for hours at at time, it can also make them have a loss of interst in things they would otherwise enjoy.</h4>
 				<br>
-				<h2 class="text-center">Server 2:</h2>
+				<h2 class="text-center"></h2>
 					<h4 class="text-center">s2.buymc.net</h4>
 				<br>
 				<h2 class="text-center">Server 3:</h2>
