--- a/servers.html
+++ b/servers.html
@@ -61,7 +61,7 @@
             <div class="text col-md-8 col-12 mx-auto">
 		    
 		                <br>
-				<h1 class="text-center">About Depression/h1>
+				<h1 class="text-center">About Depression</h1>
 
 		                 <br>
 		                 <h2 class="text-center">What is depression?</h2>
