--- a/info.html
+++ b/info.html
@@ -16,8 +16,8 @@
         <ul class="navbar-nav mr-auto">
           <li class="nav-item"> <a class="nav-link" href="index.html">Home </a> </li>
           <li class="nav-item"> <a class="nav-link" href="donate.html">Donate </a> </li>
-		  <li class="nav-item active"> <a class="nav-link" href="servers.html">Info </a> </li>
-		  <li class="nav-item"> <a class="nav-link" href="buy.html">Treatment </a> </li>
+		  <li class="nav-item active"> <a class="nav-link" href="info.html">Info </a> </li>
+		  <li class="nav-item"> <a class="nav-link" href="treatment.html">Treatment </a> </li>
                   <li class="nav-item"> <a class="nav-link" href="discord.html">Get Help </a> </li>
           <!-- <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Server IP  </a>
@@ -46,7 +46,7 @@
         <div class="container">
           <div class="row">
             <div class="col-12">
-              <h1 class="text-center">Servers</h1>
+              <h1 class="text-center">About Depression</h1>
               <!-- <p class="text-center"><a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a> </p> -->
             </div>
           </div>
@@ -60,8 +60,6 @@
           <div class="row">
             <div class="text col-md-8 col-12 mx-auto">
 		    
-		                <br>
-				<h1 class="text-center">About Depression</h1>
 
 		                 <br>
 		                 <h2 class="text-center">What is depression?</h2>
