--- a/info.html
+++ b/info.html
@@ -66,7 +66,7 @@
 			        	<h4 class="text-center">Depression is a mood disorder, which can affect people's moods in making them overly sad or alone, making them stay to themselfs for hours at at time, it can also make them have a loss of interst in things they would otherwise enjoy.</h4>
 				<br>
 				<h2 class="text-center"></h2>
-					<h4 class="text-center">s2.buymc.net</h4>
+					<h2 class="text-center">How do I know if I've got depression?</h2>
 				<br>
 				<h2 class="text-center">Server 3:</h2>
 					<h4 class="text-center">s3.buymc.net</h4>
