--- a/credits.html
+++ b/credits.html
@@ -1,5 +1,8 @@
-PE AT
+<html>
+<center>
+    
+<h1>PE AT
 
-Copyright JonoLeviaThan
-Template By Nic Hanna Studios
-Edited by JonoLeviaThan
+<h3>Copyright JonoLeviaThan
+<h3>Template By Nic Hanna Studios
+<h3>Edited by JonoLeviaThan
