--- a/treatment.html
+++ b/treatment.html
@@ -18,7 +18,7 @@
           <li class="nav-item"> <a class="nav-link" href="donate.html">Donate </a> </li>
 		  <li class="nav-item"> <a class="nav-link" href="info.html">Info </a> </li>
 		  <li class="nav-item active"> <a class="nav-link" href="treatment.html">Treatment </a> </li><br>
-		  <li class="nav-item"> <a class="nav-link" href="discord.html">Get Help </a> </li>
+		  <li class="nav-item"> <a class="nav-link" href="help.html">Get Help </a> </li>
           <!-- <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Server IP  </a>
             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
