--- a/info.html
+++ b/info.html
@@ -67,7 +67,7 @@
 				<br>
 				<h2 class="text-center"></h2>
 					<h2 class="text-center">What's the symptoms?</h2>
-		                        <h4 class="text-center">Test</h4>
+		                        <h4 class="text-center">Depression has a Lot of symptoms, the symptoms of depression are close to normal saddness, this makes it hard to diagnose in some cases.</h4>
 				<br>
 				<h2 class="text-center">Server 3:</h2>
 					<h4 class="text-center">s3.buymc.net</h4>
