--- a/info.html
+++ b/info.html
@@ -68,8 +68,17 @@
 				<h2 class="text-center"></h2>
 					<h2 class="text-center">What's the symptoms?</h2>
 		                        <h4 class="text-center">Depression has a Lot of symptoms, the symptoms of depression are close to normal saddness, this makes it hard to diagnose in some cases.</h4>
-                                        <h3 class="text-center">Common Feelings:</h3>
-		                        <h4 class="text">overwhelmed, guilty, irritable, frustrated, lacking in confidence, unhappy, indecisive, disappointed, miserable, sad</h4>
+                                        <h4 class="text-center"></h4>
+		                        <h4 class="text">1. Overwhelmed</h4>
+		                        <h4 class="text">2. Guilty</h4>
+                                        <h4 class="text">3. Irritable</h4> 
+                                        <h4 class="text">4. Frustrated</h4>
+                                        <h4 class="text">5. Lacking in confidence</h4>
+                                        <h4 class="text">6. Unhappy</h4>
+                                        <h4 class="text">7. Indecisive</h4>
+                                        <h4 class="text">8. Disappointe</h4>
+                                        <h4 class="text">9. Miserable</h4>
+		                        <h4 class="text">10. Sad</h4>
 		                <br>
 				<h2 class="text-center">Server 3:</h2>
 					<h4 class="text-center">s3.buymc.net</h4>
