--- a/treatment.html
+++ b/treatment.html
@@ -49,67 +49,17 @@
         <div class="container">
           <div class="row">
             <div class="text col-md-9 col-12 mx-auto">
-				<h1 class="text-center">How to Buy a Server</h1>
-				<h2 class="text-center">Please Play on Server Before Purchase</h2>
-				<h4>Contact JonoLeviaThan#7697 on discord to purchase a server!<br><br>
+				<h1 class="text-center">Depression Treatments</h1>
+		  </div>
+	  <div class="container">
+	  <div class="jumbotron">
+        <div class="container">
+          <div class="row">
+            <div class="text col-md-9 col-12 mx-auto">
+				<h4 class="text-center">Treamtment for depression can vary from different people due to the different levels of depression they may have. The most common treatments for depression is (Therapy) & (Medication),</h4>
+
 					</h4>
 			  </div>
-		  </div>
-		</div>
-	</div>
-	</div>
-	  <div class="container">
-	  <div class="jumbotron">
-        <div class="container">
-          <div class="row">
-            <div class="text col-md-9 col-12 mx-auto">
-				<h1 class="text-center">Pricing</h1>
-				<h4 class="text-center">General Server Price is $5 USD</h4>
-				<h4 class="text-center">Buneecord Server Price is $5 USD For Bungee and Hub, Extra $3 USD Per Server Added</h4>
-				<h4 class="text-center">If You Live In A Different Dollar Exchange Area The Price will Change</h4>
-					</h4>
-			  </div>
-			</div>
-		  </div>
-	  </div>
-	  </div>
-	  <div class="container">
-	  <div class="jumbotron">
-        <div class="container">
-          <div class="row">
-            <div class="text col-md-9 col-12 mx-auto">
-				<h1 class="text-center">How Will I Pay</h1>
-				<h4 class="text-center">Payment Will Be Sent Over Via PayPal!</h4>
-					</h4>
-		    </div>
-		  </div>
-		</div>
-	</div>
-	</div>
-	  <div class="container">
-	  <div class="jumbotron">
-        <div class="container">
-          <div class="row">
-            <div class="text col-md-9 col-12 mx-auto">
-				<h1 class="text-center">How Will I Get The Server  Files</h1>
-				<h4 class="text-center">Server Files Will Be Sent Through A Google Drive</h4>
-				<h4 class="text-center">With A Link For It Given To Buyer</h4>
-					</h4>
-		  
-		    </div>
-		  </div>
-		</div>
-	</div>
-	</div>
-	  <div class="container">
-	  <div class="jumbotron">
-        <div class="container">
-          <div class="row">
-            <div class="text col-md-9 col-12 mx-auto">
-				<h1 class="text-center">Can I Get A Refund</h1>
-				<h4 class="text-center">Refunds Can Only Be Given If Buyer Hasn't Gotten The Google Drive Link</h4>
-				<h4 class="text-center">If They Have, No Refund Will Be Given</h4>
-					</h4>
 			  </div>
 			</div>
 		  </div>
@@ -121,7 +71,7 @@
         <div class="row">
           <div class="col-12">
 
-            <p>Copyright © BuyMC. All rights reserved.</p>
+            <p>Copyright © JonoLeviaThan All rights reserved.</p>
 			<p>Designed by JonoLeviaThan Studios</p>
           </div>
         </div>
