--- a/help.html
+++ b/help.html
@@ -40,16 +40,15 @@
         <div class="container">
           <div class="row">
             <div class="col-12">
-              <h1 class="text-center">Discord</h1>
+              <h4 class="text-center">Where to Get Help?</h4>
             </div>
           </div>
         </div>
       </div>
     </header>
 	  <center>
-    	<iframe src="https://discordapp.com/widget?id=622031500111773696&theme=dark" width="350" height="500" allowtransparency="true" frameborder="0"></iframe>
 	  </center>
-    <footer class="text-center">
+              <h1 class="text-center"></h1>
 		<br><br>
       <div class="container">
         <div class="row">
