--- a/help.html
+++ b/help.html
@@ -48,7 +48,13 @@
     </header>
 	  <center>
 	  </center>
-              <h4 class="text-center">A good place to start with getting help for depression is therapy, for this I would recommend searching for therpests near you. After you've done some therapy, the therapest can determine if you need medication and if they do, then you should visit your local Pharmacy/Drug Store.</h4>
+	  <div class="container">
+	  <div class="jumbotron">
+        <div class="container">
+          <div class="row">
+            <div class="text col-md-9 col-12 mx-auto">
+				<h1 class="text-center">>A good place to start with getting help for depression is therapy, for this I would recommend searching for therpests near you. After you've done some therapy, the therapest can determine if you need medication and if they do, then you should visit your local Pharmacy/Drug Store.</h1>
+		  </div>
 		<br><br>
       <div class="container">
         <div class="row">
