--- a/treatment.html
+++ b/treatment.html
@@ -59,7 +59,7 @@
 				<h4 class="text-center">Treamtment for depression can vary from different people due to the different levels of depression they may have. The most common treatments for depression is (Therapy) & (Medication),</h4>
 		    <h4></h4>
 		    <h4></h4>
-		    <h4 class="text-center">Some people whith depression don't need medication, they would usually do therpy, most cases of this would be people with depression only for a specific thing not as an disorder</h4>
+		    <h4 class="text-center">Some people whith depression don't need medication, they would usually do therapy, most cases of this would be people with depression only for a specific thing not as an disorder</h4>
 					</h4>
 			  </div>
 			  </div>
