--- a/help.html
+++ b/help.html
@@ -53,7 +53,7 @@
         <div class="container">
           <div class="row">
             <div class="text col-md-9 col-12 mx-auto">
-				<h4 class="text-center">When seeking help for depression the first place you should start is your local docter/GP, they will do an assessment to see the severity of your condition, they will them a mental health care plan & refer you to a local therapist. They can also do a medication option and provide a script for this, in which case you would go to your local Pharmacy/Drug Store and get the medication.</h4>
+				<h4 class="text-center">When seeking help for depression the first place you should start is your local docter/GP, they will do an assessment to see the severity of your condition, they will then do a mental health care plan & refer you to a local therapist. They can also do a medication option and provide a script for this, in which case you would go to your local Pharmacy/Drug Store and get the medication.</h4>
 		  </div>
 		<br><br>
       <div class="container">
