--- a/info.html
+++ b/info.html
@@ -63,7 +63,7 @@
 
 		                 <br>
 		                 <h2 class="text-center">What is depression?</h2>
-			        	<h4 class="text-center">Depression is a mood disorder, which can affect people's moods in making them overly sad or alone, making them stay to themselves for hours at at time, it can also make them have a loss of interst in things they would otherwise enjoy.</h4>
+			        	<h4 class="text-center">Depression is a mood disorder, which can affect people's moods in making them overly sad or alone, making them stay to themselves for hours at at time, it can also make them have a loss of interest in things they would otherwise enjoy.</h4>
 				<br>
 				<h2 class="text-center"></h2>
 					<h2 class="text-center">What's the symptoms?</h2>
